<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.akarsh.xml.OtherActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        >


        <TextView

            android:layout_weight="25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User"
            android:id="@+id/tv"/>

        <EditText

            android:layout_weight="75"
            android:hint="@string/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:id="@+id/layout">


        <TextView

            android:layout_weight="25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pws"
            android:id="@+id/tv1"/>

        <EditText

            android:layout_weight="75"
            android:hint="@string/hint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout"
        android:id="@+id/linearLayout">


        <TextView

            android:layout_weight="25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conf"
            android:id="@+id/tv2"/>

        <EditText

            android:layout_weight="75"
            android:hint="@string/hint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/button"
        android:layout_below="@+id/ll"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp" />


</RelativeLayout>
